# Note

./: README.md
CMakeTutorial/: CMakeLists.txt
CMakeTutorial/ffmpeg/: CMakeLists.txt  ffmpeg.cpp  ffmpeg.h
CMakeTutorial/libusb/: CMakeLists.txt  libusb.cpp  libusb.h
CMakeTutorial/libuvc/: CMakeLists.txt  libuvc.cpp  libuvc.h
CMakeTutorial/src/: main.cpp
mCMake/app/: CMakeLists.txt  build.gradle
mCMake/app/src/main/: AndroidManifest.xml
mCMake/app/src/main/cpp/: CMakeLists.txt
mCMake/app/src/main/cpp/ffmpeg/: CMakeLists.txt  ffmpeg.cpp
mCMake/app/src/main/cpp/libusb/: CMakeLists.txt  libusb.cpp
mCMake/app/src/main/cpp/libuvc/: CMakeLists.txt  libuvc.cpp
mCMake/app/src/main/cpp/src/: native-lib.cpp
mCMake/app/src/main/java/com/center/mcmake/: MainActivity.java
mCMake/app/src/main/res/layout/: activity_main.xml
mCMake/app/src/main/res/values/: strings.xml
mCMake/gradle/wrapper/: gradle-wrapper.properties
rajawali/: rajawali笔记.java
test/: graphicpath.7z  preview2.7z
